# ccpt

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.project_slug}}/: .clang-tidy  .clang-tidy.ignore  .clangd  .gitignore  CMakeLists.txt  main.typ  makefile  xmake.lua
{{cookiecutter.project_slug}}/cmake/: gtest.cmake
{{cookiecutter.project_slug}}/hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  add.cc
{{cookiecutter.project_slug}}/tests/: add_test.cc  main.cc
